--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon ./server.js localhost 8080"
     },
     "author": "",
     "license": "ISC",
@@ -18,5 +19,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.9",
         "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.13"
     }
 }
