--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "gridfs-stream": "^1.1.1",
         "jsonwebtoken": "^8.5.1",
+        "method-override": "^3.0.0",
         "mongoose": "^6.0.9",
         "multer": "^1.4.3",
         "multer-gridfs-storage": "^5.0.2",
