--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "mongoose": "^6.0.9",
         "multer": "^1.4.3",
         "multer-gridfs-storage": "^5.0.2",
+        "razorpay": "^2.0.7",
+        "shortid": "^2.2.16",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
